# c-c

./: README.md  STATUS.md
.github/workflows/: app-release.yml  backend.yml  swarm-manage.yml
app/: README.md  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: crypto_tools.rs  http_client.rs  image.rs  lib.rs  main.rs
app/src/components/: AddServerDialog.tsx  AppLayout.tsx  AppSidebar.tsx  ProtectedRoute.tsx  UpdateChecker.tsx
app/src/hooks/: use-auth.ts  use-servers.ts  use-swarm.ts
app/src/lib/: api.ts  utils.ts
app/src/pages/: CryptoTools.tsx  Dashboard.tsx  ImageTool.tsx  Login.tsx  RequestClient.tsx  ServerManage.tsx  ServerStats.tsx  StackSecrets.tsx
app/src/store/: auth.store.ts  collections.store.ts  requests.store.ts  stats.store.ts  updater.store.ts
app/src/types/: auth.ts  collections.ts  server.ts  swarm.ts
backend/: .env  .env.example  Dockerfile  README.md  go.mod  go.sum
backend/cmd/: main.go
backend/internal/adapters/handler/: auth.go  collection.go  github.go  serializer.go  server.go
backend/internal/adapters/http/: auth.go  collection.go  github.go  routes.go  server.go
backend/internal/adapters/middleware/: middleware.go
backend/internal/core/domain/: auth.go  collection.go  common.go  github.go  response.go  server.go
backend/internal/core/logger/: logger.go
backend/internal/core/repository/: auth.go  (+6 more)
backend/k8s/: 1-secrets.yaml  2-deployment.yaml  3-service.yaml  4-http-route.yaml
docs/proposals/: groups-and-sharing.md
swarm-manage/: .air.toml  Dockerfile  README.md  docker-compose.yml  go.mod
swarm-manage/cmd/: main.go
(+11 files in other folders)
