[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
crypto_box = "0.9"
blake2 = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
image = "0.25"
webp = "0.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "v7"] }
cuid2 = "0.1"
bcrypt = "0.16"
argon2 = "0.5"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
hmac = "0.12"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
